--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,11 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+    
     <link rel="stylesheet" href="./assets/css/datepicker.css">
     <script src="./assets/js/bootstrap-datepicker.js"></script>
 
@@ -25,6 +27,9 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
 
     <style>
         .ngx-pagination {
@@ -58,6 +63,8 @@
                 format: 'dd-mm-yyyy',
                 autoclose: true
             });
+
+            $("select").select2();
 
             //     $("#btnExport").click(function(){
             //     alert('');
