--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                 autoclose: true
             });
 
-            $("select").select2();
+            //$("select").select2();
 
             //     $("#btnExport").click(function(){
             //     alert('');
