--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,13 @@
 
         <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
-
+        <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <style>
+        body{
+    font-family: 'Karla', sans-serif;
+    font-size: 14px;
+}
+
         .ngx-pagination {
             padding: 0.1875rem 0.625rem;
             color: white !important;
